--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Teste realizado por Luis Felipe",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
