Api de titulos e titulos por id

--- a/server/src/config/config.json
+++ b/server/src/config/config.json
@@ -5,10 +5,15 @@
     "database": "eureca",
     "host": "127.0.0.1",
     "dialect": "mysql",
+    "debug": true,
 
     "server": {
       "PORT": 3000,
       "HOST": "0.0.0.0"
+    },
+
+    "titles": {
+      "MAX_PER_PAGE": 20
     }
   }
 }
