--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Teste realizado por Luis Felipe",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "build": "webpack --config webpack.prod.js",
+    "server": "nodemon index",
+    "start": "concurrently \"npm run server\" \"webpack-dev-server --open --config webpack.dev.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +20,46 @@
   },
   "homepage": "https://github.com/xilenomg/eureca#readme",
   "dependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
-    "sequelize": "^5.2.3"
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "prettier": "^1.16.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-date-picker": "^7.5.0",
+    "react-dom": "^16.8.6",
+    "react-optimize": "^1.0.3",
+    "react-router-dom": "^5.0.0",
+    "sass-loader": "^7.1.0",
+    "sequelize": "^5.2.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.10",
     "sequelize-cli": "^5.4.0"
