--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^2.0.1",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -53,6 +54,7 @@
     "sass-loader": "^7.1.0",
     "sequelize": "^5.2.3",
     "style-loader": "^0.23.1",
+    "superagent": "^5.0.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
